# hoop-diagram

./: .gitignore  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
src/hoop_diagram/: visualize.py
