[project]
name = "hoop_diagram"
version = "0.0.1"
authors = [
    { name="Yannik T. H. Schelske", email="yannik@yths.de" },
]
description = "Visualize set intersections."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yths/hoop_diagram"
Issues = "https://github.com/yths/hoop_diagram/issues"