[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hoop-diagram"
version = "0.0.3"
authors = [
    { name="Yannik T. H. Schelske", email="yannik@yths.de" },
]
description = "Visualize set intersections."
readme = { file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT License"}
dependencies = [
    "pycairo==1.27.0",
    "pillow==11.0.0",
]
keywords = ["Visualization", "Set", "Hoop Diagram", "Linear Diagram", "Set Visualization", "SVG"]

[project.urls]
Homepage = "https://github.com/yths/hoop-diagram"
Issues = "https://github.com/yths/hoop-diagram/issues"